# vangare

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.rst  Makefile  README.md  README.rst  SECURITY.md  config.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  codeql.yml  pre-commit-autoupdate.yml  python-package.yml  release.yml  tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/vangare/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py  test_vangare.py
tests/clients/: test_slixmpp.py
tests/database/: test_Users.py
tests/network/: test_StreamAlivenessMonitor.py  test_XMLStreamProtocol.py  test_XMPPStreamHandler copy.py  test_XMPPStreamHandler.py  test_tcp_connection.py
tests/xml/: test_BaseXML.py  test_Stream.py
vangare/: __init__.py  __main__.py  cli.py  server.py  test_slixmpp.py  vangare.py
vangare/database/: Users.py  __init__.py
vangare/features/: StartTLSFeature.py  StreamFeature.py  __init__.py
vangare/network/: StreamAlivenessMonitor.py  VangareClientProtocol.py  XMLStreamProtocol.py  XMPPStreamHandler.py  __init__.py
vangare/stanza/: StanzaHandler.py  StreamError.py  XMPPProcessor.py  __init__.py
vangare/utils/: ThreadSafeSingleton.py  __init__.py
vangare/xml/: BaseXML.py  Stream.py  __init__.py
