
[tool.poetry]
name = "vangare"
version = "0.1.0"
description = "Python XMPP Server"
authors = ["María Ten Rodríguez <materod@upv.edu.es>"]

readme = "README.md"
homepage = "https://github.com/materod-upv/vangare"
repository = "https://github.com/materod-upv/vangare"
documentation = "https://vangare.readthedocs.io"
keywords = ["vangare"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/materod-upv/vangare/issues"



[tool.poetry.scripts]
vangare = 'vangare.cli:main'


[tool.poetry.dependencies]
python = "<3.12,>=3.8"

click = "^8.1.3"


[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"
invoke = "^2.0.0"
flake8 = ">=4.0.1,<5.0.0"
flakeheaven = "^3.2.1"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-bugbear = "^23.2.13"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^3.0.0"
flake8-broken-line = "^0.6.0"
darglint = "^1.8.1"
isort = "^5.12.0"
black = "^23.1.0"
safety = "^2.4.0b1"
mypy = "^1.0.1"
sphinx = "^6.1.3"
recommonmark = "^0.7.1"
bump2version = "^1.0.1"
pytest = "^7.2.2"
xdoctest = "^1.1.1"
coverage = {version = "^7.2.1", extras = ["toml"]}
pytest-cov = "^3.0.0"
watchdog = {version = "^2.3.1", extras = ["watchmedo"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["vangare"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakeheaven]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-annotations = ["+*", "-ANN1??", "-ANN401"]
flake8-docstrings = ["+*", "-D212"]
"flake8-*" = ["+*"]
pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox", "nox_poetry"]

[tool.black]
line-length = 99
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
